--- a/Views/AdminOperations/Agents.cshtml
+++ b/Views/AdminOperations/Agents.cshtml
@@ -58,7 +58,7 @@
                                         {
                                             <td>
                                                 <label class="switch">
-                                                    <input type="checkbox" class="inputtype" id="@data.AgentId'_'@data.IsActive" checked>
+                                                    <input type="checkbox" class="inputtype" id="@data.AgentId _@data.IsActive" checked>
                                                     <span class="slider round"></span>
                                                 </label>
                                             </td>
@@ -67,7 +67,7 @@
                                         {
                                             <td>
                                                 <label class="switch">
-                                                    <input type="checkbox" class="inputtype" id="'@data.AgentId'_@data.IsActive">
+                                                    <input type="checkbox" class="inputtype" id="@data.AgentId _ @data.IsActive">
                                                     <span class="slider round"></span>
                                                 </label>
                                             </td>
@@ -132,7 +132,7 @@
             });
             $(".inputtype").click(function () {
                 alert(this.id);
-                UpdatingAgentActiveStatus(id);
+                UpdatingAgentActiveStatus(this.id);
             })
         });
         function UpdatingAgentActiveStatus(id) {
