--- a/Views/AdminOperations/MyBookings.cshtml
+++ b/Views/AdminOperations/MyBookings.cshtml
@@ -59,7 +59,7 @@
                                                                     </div>
 
                                                                     <div class="cancel">
-                                                                        <button class="btn cancel-btn" data-toggle="modal" data-target="#exampleModal">Cancel</button>
+                                                                        <button class="btn cancel-btn"  onclick="UpdateStatus('@dataite.AgentId','@data.ProjectId','@dataite.UnitNumber ','Rejected','Admin')">Cancel</button>
                                                                     </div>
 
                                                                 </div>
@@ -233,6 +233,20 @@
                 error: function (response) {
 
                 }
+            });
+        }
+        function UpdateStatus(aid, pid, un, status, type) {
+            $.ajax({
+                type: "POST",
+                url: "/AdminOperations/UpdateBookingStatus",
+                data: { "aid": aid, "pid": pid, "un": un, "state": status, "type": type },
+                success: function (response) {
+                    $("#exampleModal").modal('show');
+                },
+                error: function (error) {
+                    result = error;
+                    alert(result);
+                },
             });
         }
     </script>
