--- a/Views/AgentLogin/Index.cshtml
+++ b/Views/AgentLogin/Index.cshtml
@@ -15,6 +15,7 @@
           rel="stylesheet">
     <link rel="stylesheet" href="~/css/bootstrap.min.css">
     <link href="~/css/login.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="/img/sark.ico">
 </head>
 
 <body>
