--- a/Views/AgentOperations/MyBookings.cshtml
+++ b/Views/AgentOperations/MyBookings.cshtml
@@ -60,7 +60,7 @@
                                                                 </div>
 
                                                                 <div class="cancel">
-                                                                    <button class="btn cancel-btn" data-toggle="modal" data-target="#exampleModal">Cancel</button>
+                                                                    <button class="btn cancel-btn" onclick="UpdateStatus('@dataite.AgentId','@data.ProjectId','@dataite.UnitNumber ','Rejected','Agent')">Cancel</button>
                                                                 </div>
 
                                                             </div>
@@ -234,6 +234,20 @@
                 error: function (response) {
                    
                 }
+            });
+        }
+        function UpdateStatus(aid, pid, un, status, type) {
+            $.ajax({
+                type: "POST",
+                url: "/AdminOperations/UpdateBookingStatus",
+                data: { "aid": aid, "pid": pid, "un": un, "state": status, "type": type },
+                success: function (response) {
+                    $("#exampleModal").modal('show');
+                },
+                error: function (error) {
+                    result = error;
+                    alert(result);
+                },
             });
         }
     </script>
