--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,6 +1,8 @@
-﻿
-@using SarkPayOuts.Interface; 
-@inject IProjectsData   _repo; 
+﻿@using SarkPayOuts.Interface;
+@inject IProjectsData   _repo;
+@inject IAgentInterface   _agent;
+@using Microsoft.AspNetCore.Http
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -13,6 +15,7 @@
           rel="stylesheet">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/mybooking.css">
+    <link rel="shortcut icon" href="/img/sark.ico">
     @RenderSection("Styles", required: true)
 </head>
 
@@ -38,7 +41,7 @@
                             <img src="/img/logo.png" class="img-fluid logo-main">
                             <ul class="navbar-nav ml-md-auto ml-0 desktop-menu">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="map.html">Home</a>
+                                    <a class="nav-link" asp-action="Dashboard" asp-controller="AgentOperations">Home</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Layouts</a>
@@ -68,7 +71,7 @@
                             </ul>
                         </nav>
 
-                        
+
                     </div>
                 </div>
             </div>
@@ -118,105 +121,118 @@
 
 
         <section class="sidebar">
-            <div class="current">
-                <h5 class="booking-title">Current Booking</h5>
-
-                <div class="unit-number-block ">
-                    <span class="unit-square">10</span>
-                    <span class="unit-square">10</span>
-                    <span class="unit-square">10</span>
-                    <span class="unit-square">10</span>
-                </div>
-            </div>
-            <div class="previous">
-                <h5 class="booking-sub-title">Layout 1</h5>
-                <div class="unit-number-block">
-                    <span class="unit-square">10</span>
-                    <span class="unit-square">10</span>
-                    <!-- <span class="unit-square">10</span>
-                    <span class="unit-square">10</span> -->
-                </div>
-            </div>
-            <div class="cancel">
-                <h5 class="booking-sub-title">Layout 2</h5>
-                <div class="unit-number-block">
-                    <span class="unit-square">10</span>
-                    <!-- <span class="unit-square">10</span>
-                    <span class="unit-square">10</span>
-                    <span class="unit-square">10</span> -->
-                </div>
-            </div>
-        </section>
-                @RenderBody()
-        </section>
-        
-        <script src="/js/jquery-3.5.1.min.js"></script>
-        <script src="/js/popper.min.js"></script>
-        <script src="/js/bootstrap.min.js"></script>
-
-        <script>
-            $(document).ready(function () {
-                $(".hamburger").click(function () {
-                    $(this).toggleClass("is-active");
-                    $(".sidebar").toggleClass("open-sidebar");
-                    $(".sidebar-menu").toggleClass("open-sidebar");
-                });
-
-                $("#sidebar-menu").click(function () {
-                    $(".sidebar").toggleClass("open-sidebar");
-                });
-
-
-                //function makeTimer() {
-
-
-                //    var endTime = new Date("29 April 2020 9:56:00 GMT+01:00");
-                //    endTime = (Date.parse(endTime) / 1000);
-
-                //    var now = new Date();
-                //    now = (Date.parse(now) / 1000);
-
-                //    var timeLeft = endTime - now;
-
-                //    var days = Math.floor(timeLeft / 86400);
-                //    var hours = Math.floor((timeLeft - (days * 86400)) / 3600);
-                //    var minutes = Math.floor((timeLeft - (days * 86400) - (hours * 3600)) / 60);
-                //    var seconds = Math.floor((timeLeft - (days * 86400) - (hours * 3600) - (minutes * 60)));
-
-                //    if (hours < "10") { hours = "0" + hours; }
-                //    if (minutes < "10") { minutes = "0" + minutes; }
-                //    if (seconds < "10") { seconds = "0" + seconds; }
-                //    for (var i = 0; i < 10; i++) {
-
-                //        $("#hours" + i).html(hours + "&nbsp;:");
-                //        $("#minutes" + i).html(minutes + "&nbsp;:");
-                //        $("#seconds" + i).html(seconds + "");
-                //    }
-                //    // $("#days").html(days + "<span>Days</span>");
-
-
-                //}
-
-                //setInterval(function () { makeTimer(); }, 1000);
-
-                // Toggle plus minus icon on show hide of collapse element
-                $(".collapse").on('show.bs.collapse', function () {
-                    $(this).prev(".card-header").find(".fas").removeClass("fa-caret-up").addClass("fa-caret-down");
-                }).on('hide.bs.collapse', function () {
-                    $(this).prev(".card-header").find(".fas").removeClass("fa-caret-down").addClass("fa-caret-up");
-                });
-
-                $(".main-body").click(function () {
-                    if ($('.sidebar').hasClass('open-sidebar')) {
-                        $(".sidebar").toggleClass('open-sidebar')
-                        $(".hamburger").toggleClass("is-active");
+            @if (Context.Session.GetString("_AgentId") != null)
+            {
+                MyBookinsViewModel model = _agent.GetAgentsUnits(Context.Session.GetString("_AgentId"), "Agent");
+                if (model != null)
+                {
+                    List<ProjectDetails> lst = new List<ProjectDetails>();
+                    if (model.lstBlocked!=null && model.lstBlocked.Count>0) {
+                        lst.AddRange(model.lstBlocked);
                     }
-                });
+                    if (model.lstBooked  != null && model.lstBooked.Count > 0)
+                    {
+                        lst.AddRange(model.lstBooked);
+                    }
+                    if (model.lstRejected != null && model.lstRejected.Count > 0)
+                    {
+                        lst.AddRange(model.lstRejected);
+                    }
+                    <div class="current">
+                        <h5 class="booking-title">Current Booking</h5>
+                        <div class="unit-number-block ">
+                            <span class="unit-square">10</span>
+                            <span class="unit-square">10</span>
+                            <span class="unit-square">10</span>
+                            <span class="unit-square">10</span>
+                        </div>
+                    </div>
+                    <div class="previous">
+                        @if(lst!=null && lst.Count > 0) { 
+                        @foreach (var data in lst) {
+                            <h5 class="booking-sub-title">@data.ProjectName </h5>
+                            <div class="unit-number-block">
+                                @foreach (var unit in data.UnitsData) {
+                                <span class="unit-square">@unit.UnitNumber </span>
+                                }
+                            </div>
+                        }
+                        }
+                        </div>
+                }
+            }
 
+        </section>
+        @RenderBody()
+    </section>
 
+    <script src="/js/jquery-3.5.1.min.js"></script>
+    <script src="/js/popper.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $(".hamburger").click(function () {
+                $(this).toggleClass("is-active");
+                $(".sidebar").toggleClass("open-sidebar");
+                $(".sidebar-menu").toggleClass("open-sidebar");
             });
-        </script>
-        @RenderSection("Scripts", required: true)
+
+            $("#sidebar-menu").click(function () {
+                $(".sidebar").toggleClass("open-sidebar");
+            });
+
+
+            //function makeTimer() {
+
+
+            //    var endTime = new Date("29 April 2020 9:56:00 GMT+01:00");
+            //    endTime = (Date.parse(endTime) / 1000);
+
+            //    var now = new Date();
+            //    now = (Date.parse(now) / 1000);
+
+            //    var timeLeft = endTime - now;
+
+            //    var days = Math.floor(timeLeft / 86400);
+            //    var hours = Math.floor((timeLeft - (days * 86400)) / 3600);
+            //    var minutes = Math.floor((timeLeft - (days * 86400) - (hours * 3600)) / 60);
+            //    var seconds = Math.floor((timeLeft - (days * 86400) - (hours * 3600) - (minutes * 60)));
+
+            //    if (hours < "10") { hours = "0" + hours; }
+            //    if (minutes < "10") { minutes = "0" + minutes; }
+            //    if (seconds < "10") { seconds = "0" + seconds; }
+            //    for (var i = 0; i < 10; i++) {
+
+            //        $("#hours" + i).html(hours + "&nbsp;:");
+            //        $("#minutes" + i).html(minutes + "&nbsp;:");
+            //        $("#seconds" + i).html(seconds + "");
+            //    }
+            //    // $("#days").html(days + "<span>Days</span>");
+
+
+            //}
+
+            //setInterval(function () { makeTimer(); }, 1000);
+
+            // Toggle plus minus icon on show hide of collapse element
+            $(".collapse").on('show.bs.collapse', function () {
+                $(this).prev(".card-header").find(".fas").removeClass("fa-caret-up").addClass("fa-caret-down");
+            }).on('hide.bs.collapse', function () {
+                $(this).prev(".card-header").find(".fas").removeClass("fa-caret-down").addClass("fa-caret-up");
+            });
+
+            $(".main-body").click(function () {
+                if ($('.sidebar').hasClass('open-sidebar')) {
+                    $(".sidebar").toggleClass('open-sidebar')
+                    $(".hamburger").toggleClass("is-active");
+                }
+            });
+
+
+        });
+    </script>
+    @RenderSection("Scripts", required: true)
 
 </body>
 </html>
