--- a/wwwroot/css/layout-1.css
+++ b/wwwroot/css/layout-1.css
@@ -38,7 +38,9 @@ cursor: pointer;
 {
 fill: #f44336 !important;
 }
-
+.bg-booked {
+    fill: #dc3545 !important;
+}
 
 .st0{clip-path:url(#SVGID_2_);fill:none;stroke:#000000;stroke-width:0;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;}
 	
